--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="PACC – Market‑Maker">
     <meta property="og:description" content="Building the trusted bridge between producers and customers of the energy transition. We de‑risk supply, aggregate demand, and create structured pathways for hydrogen and molecules. Join us in accelerating the energy future.">
-    <meta property="og:image" content="https://pacc.services/assets/logo_full-BJVEYx9I.png">
+    <meta property="og:image" content="">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="PACC - Market Maker with Golden Gate Bridge">
-    <meta property="og:url" content="https://pacc.services">
+    <meta property="og:url" content="">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="PACC">
     <meta property="og:locale" content="en_US">
@@ -31,11 +31,11 @@
     <meta name="twitter:creator" content="@PACC">
     <meta name="twitter:title" content="PACC – Market‑Maker">
     <meta name="twitter:description" content="Building the trusted bridge for hydrogen & energy. De‑risking supply, aggregating demand, creating the future of energy transition.">
-    <meta name="twitter:image" content="https://pacc.services/assets/logo_full-BJVEYx9I.png">
+    <meta name="twitter:image" content="">
     <meta name="twitter:image:alt" content="PACC - Market Maker">
     
     <!-- Additional Meta Tags -->
-    <meta property="article:publisher" content="https://pacc.services">
+    <meta property="article:publisher" content="">
     <meta property="business:contact_data:street_address" content="">
     <meta property="business:contact_data:locality" content="San Francisco">
     <meta property="business:contact_data:region" content="CA">
@@ -43,7 +43,7 @@
     <meta property="business:contact_data:email" content="pat@pacc.services">
     
     <!-- LinkedIn Meta Tags -->
-    <meta property="og:image:secure_url" content="https://pacc.services/assets/logo_full-BJVEYx9I.png">
+    <meta property="og:image:secure_url" content="">
     <meta name="linkedin:owner" content="PACC">
   </head>
   <body>
