Fix OG images for preview deployments using dynamic URL injection
- Add Vite plugin to dynamically replace OG image URLs at build time
- Use VERCEL_URL environment variable for preview deployments
- Falls back to https://pacc.services for production builds
- Fixes iMessage and social media link previews on Vercel previews
- OG images now correctly point to the deployment URL instead of hardcoded production URL

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="PACC – Market‑Maker">
     <meta property="og:description" content="Building the trusted bridge between producers and customers of the energy transition. We de‑risk supply, aggregate demand, and create structured pathways for hydrogen and molecules. Join us in accelerating the energy future.">
-    <meta property="og:image" content="https://pacc.services/og-image.png">
+    <meta property="og:image" content="%VITE_VERCEL_URL%/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="PACC - Market Maker">
-    <meta property="og:url" content="https://pacc.services">
+    <meta property="og:url" content="%VITE_VERCEL_URL%">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="PACC">
     <meta property="og:locale" content="en_US">
@@ -33,11 +33,11 @@
     <meta name="twitter:creator" content="@PACC">
     <meta name="twitter:title" content="PACC – Market‑Maker">
     <meta name="twitter:description" content="Building the trusted bridge for hydrogen & energy. De‑risking supply, aggregating demand, creating the future of energy transition.">
-    <meta name="twitter:image" content="https://pacc.services/og-image.png">
+    <meta name="twitter:image" content="%VITE_VERCEL_URL%/og-image.png">
     <meta name="twitter:image:alt" content="PACC - Market Maker">
 
     <!-- Additional Meta Tags -->
-    <meta property="article:publisher" content="https://pacc.services">
+    <meta property="article:publisher" content="%VITE_VERCEL_URL%">
     <meta property="business:contact_data:street_address" content="">
     <meta property="business:contact_data:locality" content="San Francisco">
     <meta property="business:contact_data:region" content="CA">
@@ -45,7 +45,7 @@
     <meta property="business:contact_data:email" content="pat@pacc.services">
 
     <!-- LinkedIn Meta Tags -->
-    <meta property="og:image:secure_url" content="https://pacc.services/og-image.png">
+    <meta property="og:image:secure_url" content="%VITE_VERCEL_URL%/og-image.png">
     <meta name="linkedin:owner" content="PACC">
   </head>
   <body>
