Fix vercel.json routes and hardcode og:image URL
- Use routes instead of rewrites to properly serve static assets
- Explicitly route static file extensions before SPA fallback
- Hardcode og:image URL to https://pacc.services/og-image.png
- Add console logging to vite config for debugging

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="PACC – Market‑Maker">
     <meta property="og:description" content="Building the trusted bridge between producers and customers of the energy transition. We de‑risk supply, aggregate demand, and create structured pathways for hydrogen and molecules. Join us in accelerating the energy future.">
-    <meta property="og:image" content="%VITE_VERCEL_URL%/og-image.png">
+    <meta property="og:image" content="https://pacc.services/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="PACC - Market Maker">
